Uses shorten way to collect stream into list